# kura-metadata-store

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pom.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  brand.md  component-boundaries.md  correctness-traps.md  cpp-safety.md  kura-integration.md  research-sources.md  roadmap.md  scaffolding-status.md  testing-strategy.md
docs/decisions/: 0001-phase-claims.md  0002-cpp23-implementation.md  0003-internal-raft.md
docs/design/: 0001-binary-prefix-range.md  0002-if-then-else-transactions.md  0003-resumable-watch-streams.md  0004-lease-lifecycle-and-fenced-ownership.md  0004-lease-lifecycle-and-fencing.md  0005-durable-wal-snapshots.md  0006-deterministic-raft-simulator.md  0007-executable-raft-figure-2.md  0008-raft-hard-state-persistence.md  0009-raft-election-core.md  0010-kura-metadata-helper-client.md  0011-raft-append-entries.md  0012-raft-commit-apply.md  0013-raft-read-index.md  0014-raft-snapshots.md  0015-raft-acceptance-linearizability.md
docs/formats/: raft-hard-state-v1.md  snapshot-v1.md  wal-v1.md
docs/roadmap/features/: 001-key-size-limits.md  002-value-size-limits.md  003-range-result-limits.md  004-revision-cursor.md  005-transaction-operation-limits.md  006-compare-normalization.md  007-batch-point-read.md  008-key-generations.md  009-mvcc-tombstones.md  010-compaction-boundary.md  011-request-deduplication.md  012-dedup-retention.md  013-watch-fanout-index.md  014-watch-history-budget.md  015-watch-backpressure.md  016-lease-id-allocation.md  017-lease-expiry-command.md  018-lease-keepalive-batching.md  019-lease-key-index.md  020-fencing-token.md  021-wal-record-codec.md  022-crc32c-implementation.md  023-wal-segment-naming.md  024-wal-segment-rotation.md  025-wal-group-commit.md  026-wal-torn-tail-recovery.md  027-wal-corruption-alarm.md  028-snapshot-file-format.md  029-snapshot-atomic-publish.md  030-snapshot-integrity.md  031-snapshot-streaming.md  032-snapshot-retention.md  033-wal-snapshot-truncation.md  034-backend-atomic-apply.md  035-backend-read-snapshot.md  036-backend-space-quota.md  037-backend-compaction.md  038-backend-defragmentation.md  039-backup-export.md  040-restore-revision-bump.md  (+60 more)
include/kura/metadata/: byte_sequence.hpp  in_memory_metadata_store.hpp  metadata_store.hpp
include/kura/metadata/client/: client_config.hpp  endpoint.hpp  metadata_client.hpp  retry_policy.hpp  watch_cursor.hpp
include/kura/metadata/core/: clock.hpp  command.hpp  command_result.hpp  key_range.hpp  limits.hpp  read_consistency.hpp  request_id.hpp  response_header.hpp  revision.hpp  state_machine.hpp  status_code.hpp  store_error.hpp
include/kura/metadata/kura/: kura_client.hpp  kura_metadata_backend.hpp  reader_guard.hpp  snapshot_pointer.hpp  writer_guard.hpp
include/kura/metadata/kv/: compare.hpp  compare_result.hpp  compare_target.hpp  delete_request.hpp  mutation_event.hpp  operation_result.hpp  put_request.hpp  range_request.hpp  request_operation.hpp  transaction_request.hpp  transaction_result.hpp
include/kura/metadata/lease/: lease_id.hpp  lease_ownership.hpp  lease_record.hpp  lease_request.hpp  lease_response.hpp  lease_scheduler.hpp  lease_snapshot.hpp
include/kura/metadata/raft/: append_entries.hpp  application.hpp  election.hpp  figure2_spec.hpp  install_snapshot.hpp  log_entry.hpp  log_index.hpp  membership.hpp  node_id.hpp  persistence.hpp  persistent_state.hpp  raft_node.hpp  read_index.hpp  request_vote.hpp  role.hpp  simulation.hpp  snapshot_metadata.hpp  term.hpp
include/kura/metadata/server/: auth_context.hpp  health_status.hpp  metrics.hpp  server_config.hpp  service.hpp
include/kura/metadata/storage/: backend.hpp  checksum.hpp  durability.hpp  raft_hard_state_store.hpp  snapshot.hpp  snapshot_store.hpp  storage_error.hpp  storage_limits.hpp  wal.hpp  wal_entry.hpp
include/kura/metadata/testing/: linearizability.hpp
include/kura/metadata/watch/: watch_event.hpp  watch_filter.hpp  watch_id.hpp  watch_request.hpp  watch_response.hpp  watch_stream.hpp
src/: byte_sequence.cpp  durable_storage.cpp  figure2_spec.cpp  in_memory_metadata_store.cpp  key_range.cpp  kura_client.cpp  linearizability.cpp  raft_election.cpp  raft_hard_state_store.cpp  raft_simulation.cpp
src/main/java/io/github/himanshudhawale/kurametadata/: ByteSequence.java  CompareAndSetResult.java  DeleteResult.java  InMemoryMetadataStore.java  KeyValue.java  MetadataStore.java  PutResult.java  RangeRead.java  StoreRead.java
src/test/java/io/github/himanshudhawale/kurametadata/: ByteSequenceTest.java  InMemoryMetadataStoreTest.java
tests/: durable_storage_test.cpp  figure2_spec_test.cpp  in_memory_metadata_store_test.cpp  kura_client_test.cpp  linearizability_test.cpp  raft_acceptance_test.cpp  raft_append_entries_test.cpp  raft_commit_apply_test.cpp  raft_election_test.cpp  raft_hard_state_store_test.cpp  raft_read_index_test.cpp  raft_simulation_test.cpp  raft_snapshot_test.cpp
